--- a/web/package.json
+++ b/web/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
