new vercel json

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -1,7 +1,3 @@
 {
-  "routes": [
-    { "src": "/", "dest": "/" },
-    { "src": "/tables", "dest": "/" },
-    { "src": "/news", "dest": "/" }
-  ]
+  "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
